stylesheets/projects.css
/* Custom Google Fonts */
h2 {
  font-family: 'Quando', serif;
}
h3 {
  font-family: 'Judson', serif;
}
p {
  font-family: 'Montserrat', sans-serif;
  width: 600px;
}
canvas {
  padding-top: 120px;
  padding-left: 100px;
}
/* Projects CSS settings */
#top {
  background-image: url(../images/red_sunset.svg);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  height: 450px;
  overflow: hidden;
}
.chrome-picture {
  margin: auto;
  max-width: 720px;
  height: auto;
  width: 100%;
}
#hackathon {
  /*background-color: #50CDCC;*/
  background-color: #F38546;
  width: 100%;
  text-align: center;
  padding-top: 50px;
  padding-bottom: 20px;
}
.android-picture {
  margin: auto;
  max-width: 720px;
  height: auto;
  width: 100%;
}
#android {
  background-color: #F98678;
  width: 100%;
  text-align: center;
  padding-top: 50px;
  padding-bottom: 20px;
}
.imac-picture {
  margin: auto;
  max-width: 600px;
  height: auto;
  width: 100%;
}
#nodejs {
  background-color: #71CDFF;
  width: 100%;
  text-align: center;
  padding-top: 50px;
  padding-bottom: 20px;
}
.editor-picture {
  background-image: url(../images/editor.svg);
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  margin: auto;
  width: 616px;
  max-width: 100%;
  height: 424px;
}
#thiswebsite {
  background-color: #96CDCC;
  width: 100%;
  text-align: center;
  padding-top: 50px;
  padding-bottom: 20px;
}
.info {
  display: inline-block;
  text-align: center;
}

